base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ellington
  labels:
    name: ellington
    project: ellington
