base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ellington-web
  namespace: ellington
  labels:
    app: ellington-web
spec:
  type: ClusterIP
  selector:
    app: ellington-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
